2002-10-31  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el: Fix comment.

2002-10-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3mhack.el (w3mhack-generate-colon-keywords-file): Protect
	against unexpected data structure.

2002-10-29  Ken'ichi SATO  <ksato@iijmio-mail.jp>

	* shimbun/sb-zdnet.el (shimbun-zdnet-group-alist): Follow the
	change of the web site.
	(shimbun-zdnet-content-end): Ditto.

2002-10-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.3.3

2002-10-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mew-w3m.el: Cancel the last change.  Use `w3m-minor-mode'.

	* mime-w3m.el (mime-w3m-display-inline-images): Fix its docstring.
	(mime-w3m-safe-url-regexp): Fill its docstring.
	(mime-w3m-setup-hook): New hook.
	(mime-w3m-setup): Do not initialize `mime-w3m-mode-map'; Run the
	above hook.
	(mime-w3m-mode-map): It is not defined for XEmacs and Emacs21.
	(mime-w3m-local-map-property): New function.
	(mime-w3m-preview-text/html): Call it.

	* w3m.el (w3m-key-binding): Cancel the last change.
	(w3m-region): Change the interactive form; Do not process <base>
	tag by itself.
	(w3m-minor-mode-command-alist): Cancel the last change.
	(w3m-minor-mode-map, w3m-minor-mode-hook, w3m-minor-mode): Revival.

2002-10-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-om.el (coding-system-list): Use `defalias' and `lambda'
	instead of `defun'; allow an optional dummy argument; don't ignore
	`*noconv*'.
	(read-passwd): Use `defalias' and `lambda' instead of `defun'.
	(compose-mail): Ditto.

2002-10-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-key-binding): Remove the code to reset
	`w3m-minor-mode-map'.
	(w3m-minor-mode-command-alist): Update its docstring.
	(w3m-minor-mode-map, w3m-minor-mode-hook, w3m-minor-mode):
	Abolished.
	(w3m-minor-mode): Removed.

	* mime-w3m.el (mime-w3m-setup): Call `w3m-make-minor-mode-keymap'
	without using `w3m-minor-mode-map'.
